--- a/flutter_web/pubspec.yaml
+++ b/flutter_web/pubspec.yaml
@@ -30,9 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  fl_chart: ^0.69.0  # fl_chart는 Pub.dev에서 제공하는 차트 라이브러리
+  fl_chart: ^0.69.0 
   flutter_lints: ^4.0.0
 
+  http: ^1.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
